--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@
 * {
     font-family: sans-serif;
     color: #93aaf4;
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+}
+
+body {
+    margin: 0;
+    background: #2f2f2f;
 }
 
 .container {
@@ -21,6 +28,7 @@
     width: 100%;
     height: 128px;
     border-radius: 16px;
+    overflow: hidden;
 }
 
 .display div {
@@ -29,12 +37,12 @@
     padding: 16px;
 }
 
-.last-operation {
+.top-line {
     font-size: 16px;
     height: 24px;
 }
 
-.current-operation {
+.bottom-line {
     font-size: 30px;
 }
 
@@ -63,3 +71,70 @@
     box-shadow: inset 4px 4px 14px #ececec,
                 inset -4px -4px 14px #ffffff;
 }
+
+#mode {
+    grid-column: 3 / 5;
+    border: none;
+    border-radius: 38px;
+    box-shadow:  12px 12px 28px #ececec,
+                -12px -12px 28px #ffffff;
+    font-size: 24px;
+    font-weight: 100;
+    height: 70px;
+    margin: 0;
+    padding: 0;
+}
+
+#mode:active {
+    box-shadow: inset 4px 4px 14px #181818,
+                inset -4px -4px 14px #3d3d3d;
+}
+
+.light-mode {
+    color: #93aaf4;
+    background: #f6f6f6;
+}
+
+.dark-mode {
+    color: #ffaf53;
+    background: #2f2f2f;
+}
+
+.dark-mode .container {
+    background: #2f2f2f;
+    box-shadow:  31px 31px 61px #181818,
+                -31px -31px 61px #3d3d3d;
+}
+
+.dark-mode .btn {
+    color: #ffaf53;
+    background: #2f2f2f;
+    box-shadow:  12px 12px 28px #181818,
+                -12px -12px 28px #252525;
+}
+
+.dark-mode .btn:active {
+    box-shadow: inset 4px 4px 14px #181818,
+                inset -4px -4px 14px #3d3d3d;
+}
+
+.dark-mode #mode {
+    color: #93aaf4;
+    background: #f6f6f6;
+    box-shadow:  12px 12px 28px #181818,
+                -12px -12px 28px #252525;
+}
+
+.dark-mode #mode:active {
+    box-shadow: inset 4px 4px 14px #ececec,
+                inset -4px -4px 14px #ffffff;
+}
+
+.dark-mode .display {
+    border-color: #3d3d3d;
+}
+
+.dark-mode .display div {
+    color: #ffaf53;
+}
+  
